--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.3",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-sweetalert2": "^2.1.1"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0",
