--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1",
+    "mysql2": "^2.0.0",
     "nodemon": "^1.19.3",
     "nuxt": "^2.0.0",
+    "sequelize": "^5.21.2",
     "vue-sweetalert2": "^2.1.1"
   },
   "devDependencies": {
